--- a/index.html
+++ b/index.html
@@ -1,1 +1,305 @@
-FLi
+<!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><meta name="robots" content="noindex,follow"><meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
+<title>当代范蠡</title></head><body>
+<style>
+body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,dd,form,input,textarea,select,button{margin:0;padding:0;}em,i{font-style:normal;}
+li,ul{list-style:none;}ul{zoom:1;}img{border:none;border:0;margin:0;padding:0;vertical-align:middle;}.cl{clear:both;}.fl,.mfl{float:left;}.fr,.mfr{float:right;}.m-auto{margin:0 auto;}
+body{color:#333;font-family:arial,'Hiragino Sans GB',"Microsoft YaHei","Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,tahoma,simsun,sans-serif;}
+.mt10{margin-top:10px;}.mb10{margin-bottom:10px;}
+a{text-decoration:none;}
+
+.content{width:540px;margin:0 auto;}
+.avatar{width: 100px;height: 100px;margin-bottom: 22px;border-radius: 50%;}
+.desc{font-size:22px;line-height: 28px;text-align:center;margin-bottom: 12px;}
+.header{background-color:#159957;background-image: linear-gradient(120deg,#155799,#159957);color: #fff;padding:50px 0;text-align: center;}
+hr{border-color:#f60;border-width: 3px;max-width: 50px;margin-top: 20px;margin-bottom: 20px;border: 0;border-top: 1px solid #eee;height: 0;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;box-sizing: content-box;}
+.ws-tag a{display:inline-block;font-size:18px;color:#fff;border:1px solid #fff;padding:5px 30px;margin-right:12px;margin-bottom:10px;height:30px;line-height:30px;border-radius:30px;cursor:pointer;}
+.ws-tag a:hover{color:#22ac38;border:1px solid #fff;background-color:#fff;}
+.header span {font-size: 14px;}
+.content h2{padding-bottom:10px;margin: 40px 0 20px;border-bottom:1px solid #EEE;}
+
+@media screen and (max-width:540px){
+.content{width:90%;}
+
+}
+</style>
+
+<div class="header">
+<div class="logo"><img class="avatar" src="fli.jpg"></div>
+<div class="desc">Less is More.</div>
+<p>DIV+CSS、jQuery、LAMP、Mysql、ThinkPHP/Laravel、Bootstrap、Vue.js<br><span class="package-amount">1feng.2008@163.com<br>不要怀有渺小的梦想，它们无法打动人心。——歌德</span></p>
+<div class="ws-tag" style="margin-top:30px;"><a href="#biji">随机</a><a href="#about">关于</a></div>
+</div>
+
+<div class="content">
+<!-- <h1 style="padding-bottom:10px;margin: 40px 0 20px;text-align: center;">Less is More.</h1>
+<hr> -->
+<div id="gonggao">
+<h2><font color="red">公告</font></h2>
+<div>
+	<strong>山丘</strong></div>
+<div>
+	&nbsp;</div>
+<div>
+	&mdash;&mdash;李宗盛</div>
+<div>
+	&nbsp;</div>
+<div>
+	想说却还没说的 还很多</div>
+<div>
+	攒着是因为想写成歌</div>
+<div>
+	让人轻轻地唱着 淡淡地记着</div>
+<div>
+	就算终于忘了 也值了</div>
+<div>
+	说不定我一生涓滴意念</div>
+<div>
+	侥幸汇成河</div>
+<div>
+	然后我俩各自一端</div>
+<div>
+	望着大河弯弯 终于敢放胆</div>
+<div>
+	嘻皮笑脸 面对 人生的难</div>
+<div>
+	也许我们从未成熟</div>
+<div>
+	还没能晓得 就快要老了</div>
+<div>
+	尽管心里活着的还是那个</div>
+<div>
+	年轻人</div>
+<div>
+	因为不安而频频回首</div>
+<div>
+	无知地索求 羞耻于求救</div>
+<div>
+	不知疲倦地翻越 每一个山丘</div>
+<div>
+	越过山丘 虽然已白了头</div>
+<div>
+	喋喋不休 时不我予的哀愁</div>
+<div>
+	还未如愿见着不朽</div>
+<div>
+	就把自己先搞丢</div>
+<div>
+	越过山丘 才发现无人等候</div>
+<div>
+	喋喋不休 再也唤不回温柔</div>
+<div>
+	为何记不得上一次是谁给的拥抱</div>
+<div>
+	在什么时候</div>
+<div>
+	我没有刻意隐藏 也无意让你感伤</div>
+<div>
+	多少次我们无醉不欢</div>
+<div>
+	咒骂人生太短 唏嘘相见恨晚</div>
+<div>
+	让女人把妆哭花了 也不管</div>
+<div>
+	遗憾我们从未成熟</div>
+<div>
+	还没能晓得 就已经老了</div>
+<div>
+	尽力却仍不明白</div>
+<div>
+	身边的年轻人</div>
+<div>
+	给自己随便找个理由</div>
+<div>
+	向情爱的挑逗 命运的左右</div>
+<div>
+	不自量力地还手 直至死方休</div>
+<div>
+	越过山丘 虽然已白了头</div>
+<div>
+	喋喋不休 时不我予的哀愁</div>
+<div>
+	还未如愿见着不朽</div>
+<div>
+	就把自己先搞丢</div>
+<div>
+	越过山丘 才发现无人等候</div>
+<div>
+	喋喋不休 再也唤不回了温柔</div>
+<div>
+	为何记不得上一次是谁给的拥抱</div>
+<div>
+	在什么时候</div>
+<div>
+	越过山丘 虽然已白了头</div>
+<div>
+	喋喋不休 时不我予的哀愁</div>
+<div>
+	还未如愿见着不朽</div>
+<div>
+	就把自己先搞丢</div>
+<div>
+	越过山丘 才发现无人等候</div>
+<div>
+	喋喋不休 再也唤不回了温柔</div>
+<div>
+	为何记不得上一次是谁给的拥抱</div>
+<div>
+	在什么时候</div>
+<div>
+	喋喋不休 时不我予的哀愁</div>
+<div>
+	向情爱的挑逗 命运的左右</div>
+<div>
+	不自量力地还手 直至死方休</div>
+<div>
+	为何记不得上一次是谁给的拥抱</div>
+<div>
+	在什么时候</div>
+<div>
+	&nbsp;</div>
+<div>
+	&nbsp;</div>
+<div>
+	<strong>人生</strong></div>
+<div>
+	&nbsp;</div>
+<div>
+	&mdash;&mdash;夏小虎</div>
+<div>
+	&nbsp;</div>
+<div>
+	当夕阳照亮了肩膀</div>
+<div>
+	一寸寸缩短着梦想</div>
+<div>
+	城市里 闪烁的灯光</div>
+<div>
+	哪一盏是为我而亮</div>
+<div>
+	命运啊 能否改变慈祥</div>
+<div>
+	给我不会坠落的翅膀</div>
+<div>
+	在天空 努力地飞翔</div>
+<div>
+	沿着从不平坦的方向</div>
+<div>
+	当我高举理想的火炬</div>
+<div>
+	天空却刚好下起了大雨</div>
+<div>
+	当我面对镜中的自己</div>
+<div>
+	越来越感到陌生的恐惧</div>
+<div>
+	当我立志要改变世界</div>
+<div>
+	才发现世界已改变了你</div>
+<div>
+	当我不再年少和轻狂</div>
+<div>
+	是否还拥有追梦的勇气</div>
+<div>
+	这川流不息的人生</div>
+<div>
+	就像一首抒情的诗</div>
+<div>
+	曾经写下千言万语</div>
+<div>
+	最后还是一张白纸</div>
+<div>
+	当所有都随风而逝</div>
+<div>
+	心中留下一把尺</div>
+<div>
+	量一量经过的青春</div>
+<div>
+	问一声到底值不值</div>
+<div>
+	唔唔唔唔</div>
+<div>
+	唔唔唔唔</div>
+<div>
+	唔唔唔唔</div>
+</div>
+<div id="biji">
+<h2>随机</h2>
+<div>
+	每个人都会经过这个阶段，见到一座山，就想知道山后面是什么。我很想告诉他，可能翻过山后面，你会发现没什么特别。回望之下，可能会觉得这一边更好。</div>
+<div>
+	&nbsp;</div>
+<div>
+	从小我就懂得保护自己，我知道要想不被人拒绝，最好的办法就是先拒绝别人。</div>
+<div>
+	&nbsp;</div>
+<div>
+	每个人都会坚持自己的信念，在别人来看是浪费时间，她却觉得很重要。</div>
+<div>
+	&nbsp;</div>
+<div>
+	我曾经问过自己，你最喜欢的女人是不是我，现在我已经不想再知道啦。如果有一天我忍不住问起，你一定要骗我，就算你心里有多么不愿意，也不要告诉我你最喜欢的人不是我。</div>
+<div>
+	&nbsp;</div>
+<div>
+	以前也这么想，但是看着他一天天长大，我知道他早晚会离开我。现在我觉得什么都无所谓啦。以前我认为那句话很重要，因为我觉得有些话说出来就是一生一世，现在想一想，说不说也没有什么分别，有些事会变的。我一直以为是我自己赢了，直到有一天看着镜子，才知道自己输了，在我最美好的时候，我最喜欢的人都不在我身边。如果能重新开始那该多好啊！</div>
+<div>
+	&nbsp;</div>
+<div>
+	虽然我很喜欢她，但始终没有告诉她。因为我知道得不到的东西永远是最好的。</div>
+<div>
+	&nbsp;</div>
+<div>
+	我曾经听人说过，当你不可以再拥有的时候。你唯一可以做的，就是让自己不要忘记。</div>
+<div>
+	&nbsp;</div>
+<div>
+	你越想忘记一个人时，其实你越会记得他。人的烦恼就是记性太好，如果可以把所有事都忘掉，以后每一日都是个新开始，你说多好。</div>
+<div>
+	&nbsp;</div>
+<div>
+	其实&ldquo;醉生梦死&rdquo;只不过是她跟我开的一个玩笑，你越想知道自己是不是忘记的时候，你反而记得更清楚。我曾经听人说过，当你不能够再拥有，你唯一可以做的，就是令自己不要忘记。</div>
+<div>
+	&nbsp;</div>
+<div>
+	知不知道饮酒和饮水有什么区别？酒越饮越暖，水越喝越寒。</div>
+<div>
+	&nbsp;</div>
+<div>
+	我一直以为是我自己赢了，直到有一天看着镜子，才知道自己输了，在我最美好的时候，我最喜欢的人都不在我身边。</div>
+<div>
+	&nbsp;</div>
+<div>
+	如果感情是可以分胜负的话，我不知道她是否会赢。但是我很清楚，从一开始，我就输了。</div>
+<div>
+	&nbsp;</div>
+<div>
+	看着他们走的时候，我的心是妒忌的。我曾经也有过这样的机会。不知道为什么。却放弃了。</div>
+<div>
+	&nbsp;</div>
+<div>
+	任何人都可以变得狠毒，只要你尝试过甚么叫忌妒。</div>
+<div>
+	&nbsp;</div>
+<div>
+	有些人是离开之后，才会发现离开了的人才是自己的最爱。</div>
+<div>
+	&nbsp;</div>
+<div>
+	——王家卫《东邪西毒》</div>
+</div>
+<div id="about">
+<h2>关于</h2>
+<div>《罗生门》这部黑白电影，明确无误的传达了人性的黑与白，再次用事实雄辩的告诉我们：真相是不存在的。它是如此的难以表达，你只能自己斟酌琢磨，作出自己的选择和判断。从这种意义上看，以揭露事实真相为终极目标的新闻记者，倒真是个令人绝望的职业。于普通人而言，整个世界上大部分的事实和人品，都如雾里看花，水中望月，须知穿过重重迷雾作出事实判断是多么的困难，须知,知人与自知是人类终生都不能完美完成的事业。</div>
+</div>
+<div>
+	&nbsp;</div>
+<div>
+	&nbsp;</div>
+<div style="color:#5D5D5D;font-size:14px;">
+	&copy; FLi</div>
+<div>
+	&nbsp;</div>
+<div>
+	&nbsp;</div>
+</div>
+</body></html>
