--- a/detail.html
+++ b/detail.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><meta name="robots" content="noindex,follow"><meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
 <title>当代范蠡</title><meta name="keywords" content="" /><meta name="description" content="" /><link rel="stylesheet" href="style.css" media="all"></head><body>
-<div class="header">
-<div class="logo"><img class="avatar" src="fli.jpg"></div>
-<div class="desc">Less is More.</div>
-<p>DIV+CSS、jQuery、LAMP、Mysql、ThinkPHP/Laravel、Bootstrap、Vue.js<br><span class="desc2">1feng.2008@163.com<br>不要怀有渺小的梦想，它们无法打动人心。——歌德</span></p>
-<div class="ws-tag" style="margin-top:30px;"><a href="#biji">随机</a><a href="#about">关于</a></div>
-</div>
-
 <div class="content">
 <!-- <h1 style="padding-bottom:10px;margin: 40px 0 20px;text-align: center;">Less is More.</h1>
 <hr> -->
-<div id="gonggao">
-<h2><font color="red">公告</font></h2>
+<div class="content">
+<h1 class="title">用户复购总不能提升？你必须关注的 3 个指标</h1>
+<div class="article">
 <div>
 	<strong>山丘</strong></div>
 <div>
@@ -199,78 +193,6 @@
 <div>
 	唔唔唔唔</div>
 </div>
-<div id="biji">
-<h2>随机</h2>
-<div>
-	每个人都会经过这个阶段，见到一座山，就想知道山后面是什么。我很想告诉他，可能翻过山后面，你会发现没什么特别。回望之下，可能会觉得这一边更好。</div>
-<div>
-	&nbsp;</div>
-<div>
-	从小我就懂得保护自己，我知道要想不被人拒绝，最好的办法就是先拒绝别人。</div>
-<div>
-	&nbsp;</div>
-<div>
-	每个人都会坚持自己的信念，在别人来看是浪费时间，她却觉得很重要。</div>
-<div>
-	&nbsp;</div>
-<div>
-	我曾经问过自己，你最喜欢的女人是不是我，现在我已经不想再知道啦。如果有一天我忍不住问起，你一定要骗我，就算你心里有多么不愿意，也不要告诉我你最喜欢的人不是我。</div>
-<div>
-	&nbsp;</div>
-<div>
-	以前也这么想，但是看着他一天天长大，我知道他早晚会离开我。现在我觉得什么都无所谓啦。以前我认为那句话很重要，因为我觉得有些话说出来就是一生一世，现在想一想，说不说也没有什么分别，有些事会变的。我一直以为是我自己赢了，直到有一天看着镜子，才知道自己输了，在我最美好的时候，我最喜欢的人都不在我身边。如果能重新开始那该多好啊！</div>
-<div>
-	&nbsp;</div>
-<div>
-	虽然我很喜欢她，但始终没有告诉她。因为我知道得不到的东西永远是最好的。</div>
-<div>
-	&nbsp;</div>
-<div>
-	我曾经听人说过，当你不可以再拥有的时候。你唯一可以做的，就是让自己不要忘记。</div>
-<div>
-	&nbsp;</div>
-<div>
-	你越想忘记一个人时，其实你越会记得他。人的烦恼就是记性太好，如果可以把所有事都忘掉，以后每一日都是个新开始，你说多好。</div>
-<div>
-	&nbsp;</div>
-<div>
-	其实&ldquo;醉生梦死&rdquo;只不过是她跟我开的一个玩笑，你越想知道自己是不是忘记的时候，你反而记得更清楚。我曾经听人说过，当你不能够再拥有，你唯一可以做的，就是令自己不要忘记。</div>
-<div>
-	&nbsp;</div>
-<div>
-	知不知道饮酒和饮水有什么区别？酒越饮越暖，水越喝越寒。</div>
-<div>
-	&nbsp;</div>
-<div>
-	我一直以为是我自己赢了，直到有一天看着镜子，才知道自己输了，在我最美好的时候，我最喜欢的人都不在我身边。</div>
-<div>
-	&nbsp;</div>
-<div>
-	如果感情是可以分胜负的话，我不知道她是否会赢。但是我很清楚，从一开始，我就输了。</div>
-<div>
-	&nbsp;</div>
-<div>
-	看着他们走的时候，我的心是妒忌的。我曾经也有过这样的机会。不知道为什么。却放弃了。</div>
-<div>
-	&nbsp;</div>
-<div>
-	任何人都可以变得狠毒，只要你尝试过甚么叫忌妒。</div>
-<div>
-	&nbsp;</div>
-<div>
-	有些人是离开之后，才会发现离开了的人才是自己的最爱。</div>
-<div>
-	&nbsp;</div>
-<div>
-	——王家卫《东邪西毒》</div>
-</div>
-<div id="about">
-<h2>关于</h2>
-<div>
-	<strong>github地址：</strong><a href="https://github.com/Fanli2012" target="_blank">https://github.com/Fanli2012</a></div>
-<div>
-	&nbsp;</div>
-<div>《罗生门》这部黑白电影，明确无误的传达了人性的黑与白，再次用事实雄辩的告诉我们：真相是不存在的。它是如此的难以表达，你只能自己斟酌琢磨，作出自己的选择和判断。从这种意义上看，以揭露事实真相为终极目标的新闻记者，倒真是个令人绝望的职业。于普通人而言，整个世界上大部分的事实和人品，都如雾里看花，水中望月，须知穿过重重迷雾作出事实判断是多么的困难，须知,知人与自知是人类终生都不能完美完成的事业。</div>
 </div>
 <div>
 	&nbsp;</div>
