--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <title>当代范蠡</title><meta name="keywords" content="" /><meta name="description" content="" /><link rel="stylesheet" href="style.css" media="all"></head><body>
 <div class="header">
 <div class="logo"><img class="avatar" src="fli.jpg"></div>
-<div class="desc">Less is More.</div>
-<p>DIV+CSS、jQuery、LAMP、Mysql、ThinkPHP/Laravel、Bootstrap、Vue.js<br><span class="desc2">邮箱：1feng.2008@163.com<br>不要怀有渺小的梦想，它们无法打动人心。——歌德</span></p>
+<div class="h1desc">FLi</div>
+<p class="desc">DIV+CSS、jQuery、LAMP、Mysql、ThinkPHP/Laravel、Bootstrap、Vue.js<br><span class="desc2">邮箱：1feng.2008@163.com<br>不要怀有渺小的梦想，它们无法打动人心。——歌德</span></p>
 <div class="ws-tag" style="margin-top:30px;"><a href="#biji">随机</a><a href="#about">关于</a></div>
 </div>
 
