--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div class="logo"><img class="avatar" src="fli.jpg"></div>
 <div class="h1desc">FLi</div>
 <p class="desc">DIV+CSS、jQuery、LAMP、Mysql、ThinkPHP/Laravel、Bootstrap、Vue.js<br><span class="desc2">邮箱：1feng.2008@163.com<br>不要怀有渺小的梦想，它们无法打动人心。——歌德</span></p>
-<div class="ws-tag" style="margin-top:30px;"><a href="#biji">随机</a><a href="#about">关于</a></div>
+<div class="ws-tag" style="margin-top:30px;"><a href="#biji">随机</a><a href="#about">关于</a><a target="_blank" href="https://github.com/Fanli2012">Github</a></div>
 </div>
 
 <div class="content">
