--- a/resume.html
+++ b/resume.html
@@ -9,16 +9,31 @@
 <div>Github：<a href="https://github.com/Fanli2012" target="_blank">https://github.com/Fanli2012</a></div>
 <div>年龄：28 | 学历：本科 | 学校：三明学院 | 专业：网络工程</div>
 <div>证书：全国计算机等级三级</div>
+<h2>开源项目</h2>
+<div>lqycms，基于laravel框架的内容管理系统：<a href="https://github.com/Fanli2012/lqycms" target="_blank">https://github.com/Fanli2012/lqycms</a></div>
+<div>72pcms，基于thinkphp3.2的CMS：<a href="https://github.com/Fanli2012/72pcms" target="_blank">https://github.com/Fanli2012/72pcms</a></div>
+<div>原生php建站：<a href="https://github.com/Fanli2012/native-php-cms" target="_blank">https://github.com/Fanli2012/native-php-cms</a></div>
 <h2>个人技能</h2>
 <div>熟练PHP开发语言，能独立开发网站（前后台）。例如：基于Laravel的<a href="https://github.com/Fanli2012/lqycms" target="_blank">LQYCMS</a></div>
-<div>熟悉框架：Laravel5.2 / Thinkphp框架(3.1>3.2>5.0)。</div>
-<div>熟悉Mysql数据库设计，了解Redis数据缓存。</div>
-<div>熟悉APP接口的开发，及配合安卓/IOS/前端人员测试接口。</div>
+<div>熟悉框架：Laravel / Thinkphp框架(3.1>3.2>5.0)。</div>
+<div>根据需求分解出相应的模块，对模块进行预估并分配。</div>
+<div>熟悉Mysql数据库设计，了解Redis数据缓存。根据需求、原型建立表，给出相应接口。</div>
+<div>熟悉接口的开发，及配合安卓/IOS/前端人员测试接口。</div>
 <div>熟练Windows、Linux操作系统VPS或者服务器的维护。</div>
 <div>精通HTML、DIV+CSS。熟悉BootStrap框架、FrozenUI移动web框架，响应式布局网页开发，及浏览器兼容性的解决。</div>
 <div>了解JavaScript，熟悉JQuery、Ajax。</div>
 <div>熟悉版本管理、自动化部署工具：Git、SVN / Composer。</div>
 <h2>工作经历</h2>
+<div><strong class="fs24">厦门简会信息科技有限公司</strong></div>
+<div>&nbsp;</div>
+<div><strong>项目1：厝边速购</strong></div>
+<div>网址：<a href="http://dwap.xmzzwy.com/" target="_blank">http://dwap.xmzzwy.com/</a></div>
+<div>包含配送端APP和商城端APP。订单、购物车、商品收藏、收货地址、注册登录、消息公告、优惠券、积分、签到、退货退款、报事报修、停车缴费、对接第三方接口等</div>
+<div>&nbsp;</div>
+<div><strong>项目2：单创、ABM</strong></div>
+<div>功能：购物；商城；邀请好友(分销)</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
 <div><strong class="fs24">厦门豆玩互动信息科技有限公司</strong></div>
 <div>&nbsp;</div>
 <div><strong>项目1：淘刷网商城(PC端/微信端/IOS安卓接口) ，独立负责</strong></div>
@@ -40,15 +55,7 @@
 <div>3、基于thinkphp，米车网页面www.micw.com的改版；</div>
 <div>4、基于dedecms的二次开发，丽杭汽车网www.bnbni.com (响应式页面，可用电脑和手机访问观看)，汽车资讯网站，整站建设。</div>
 <div>&nbsp;</div>
-<div>&nbsp;</div>
-<div><strong class="fs24">武夷山市继昌茶庄发展有限公司</strong></div>
-<div>&nbsp;</div>
-<div>曾在武夷山市继昌茶庄发展有限公司做过技术员。对公司网站页面进行修改，专题页面的制作，服务器的日常维护，保证网站系统运行正常。页面编辑、产品上传、制作和发布，不断丰富、更新、优化网站页面的内容。用帝国cms开源程序二次开发www.jichang1919.com，包含前台页面的制作html/div+css，及网站栏目的的规划创建。对于独立中小型企业网站的开发非常熟练，从建站到发布，符合SEO优化的网站。</div>
-</div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
 <div style="color:#5D5D5D;font-size:14px;">&copy; FLi</div>
-<div>&nbsp;</div>
 <div>&nbsp;</div>
 </div>
 </body></html>
