--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><meta name="robots" content="noindex,follow"><meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
 <title>FLi</title><meta name="keywords" content="" /><meta name="description" content="" /><link rel="stylesheet" href="style.css" media="all"></head><body>
 <div class="content">
-<h1 class="title">FLi - PHP工程师</h1>
+<h1 class="title">PHP工程师</h1>
 <div class="article">
 <img src="images/skills.png" width=640px height=auto />
 <h2>个人信息</h2>
@@ -16,8 +16,8 @@
 <h2>个人技能</h2>
 <div>熟练PHP开发语言，能独立开发网站（前后台）。例如：基于Laravel的<a href="https://github.com/Fanli2012/lqycms" target="_blank">LQYCMS</a></div>
 <div>熟悉框架：Laravel / Thinkphp框架(3.1>3.2>5.0)。</div>
-<div>根据需求分解出相应的模块，对模块进行预估并分配。</div>
-<div>熟悉Mysql数据库设计，了解Redis数据缓存。根据需求、原型建立表，给出相应接口。</div>
+<div>根据需求分解出相应的模块，对模块进行预估并分配。根据需求、原型建立表，给出相应接口。</div>
+<div>熟悉Mysql数据库设计，了解Redis数据缓存。</div>
 <div>熟悉接口的开发，及配合安卓/IOS/前端人员测试接口。</div>
 <div>熟练Windows、Linux操作系统VPS或者服务器的维护。</div>
 <div>精通HTML、DIV+CSS。熟悉BootStrap框架、FrozenUI移动web框架，响应式布局网页开发，及浏览器兼容性的解决。</div>
@@ -29,9 +29,11 @@
 <div><strong>项目1：厝边速购</strong></div>
 <div>网址：<a href="http://dwap.xmzzwy.com/" target="_blank">http://dwap.xmzzwy.com/</a></div>
 <div>包含配送端APP和商城端APP。订单、购物车、商品收藏、收货地址、注册登录、消息公告、优惠券、积分、签到、退货退款、报事报修、停车缴费、对接第三方接口等</div>
+<div><img src="images/cuobian_v1.png" width=640px height=auto /></div>
 <div>&nbsp;</div>
 <div><strong>项目2：单创、ABM</strong></div>
 <div>功能：购物；商城；邀请好友(分销)</div>
+<div>说明：根据需求原型->划分模块->建表->定接口->分配->开发</div>
 <div>&nbsp;</div>
 <div>&nbsp;</div>
 <div><strong class="fs24">厦门豆玩互动信息科技有限公司</strong></div>
@@ -41,19 +43,17 @@
 <div>功能：订单管理，下单/发货/退货；公告资讯管理；商品管理；会员管理，等级；商品定制；积分兑换红包；提现记录；3级分销，佣金，积分；购物车等等…</div>
 <div>&nbsp;</div>
 <div><strong>项目2：番茄女王(移动端)，协助开发</strong></div>
-<div>网址：http://fanqie.medp.cn/</div>
+<div>网址：<a href="http://fanqie.medp.cn/" target="_blank">http://fanqie.medp.cn/</a></div>
 <div>功能：留言；预约；商城；邀请好友(分销)</div>
 <div>&nbsp;</div>
-<div><strong>项目3：抢金圣手(APP)</strong></div>
-<div>功能：任务模块开发，邀请好友做任务，注册赚取佣金，提现</div>
+<div><strong>项目3：万翔商城（移动端/IOS安卓接口），协助开发</strong></div>
+<div>网址：<a href="http://m.anport-e.com/" target="_blank">http://m.anport-e.com/</a></div>
+<div>功能：个人中心；登录注册，积分；签到；优惠券；订单列表等</div>
 <div>&nbsp;</div>
 <div>&nbsp;</div>
-<div><strong class="fs24">米车网</strong></div>
+<div><strong class="fs24">武夷山市继昌茶庄发展有限公司</strong></div>
 <div>&nbsp;</div>
-<div>1、基于phalcon做服务端api接口，为<a href="http://www.micw.net/" target="_blank">www.micw.net</a>(APP)提供数据；</div>
-<div>2、米车网招商加盟页面的制作jiameng.micw.com；</div>
-<div>3、基于thinkphp，米车网页面www.micw.com的改版；</div>
-<div>4、基于dedecms的二次开发，丽杭汽车网www.bnbni.com (响应式页面，可用电脑和手机访问观看)，汽车资讯网站，整站建设。</div>
+<div>曾在武夷山市继昌茶庄发展有限公司做过技术员。对公司网站页面进行修改，专题页面的制作，服务器的日常维护，保证网站系统运行正常。页面编辑、产品上传、制作和发布，不断丰富、更新、优化网站页面的内容。用帝国cms开源程序二次开发www.jichang1919.com，包含前台页面的制作html/div+css，及网站栏目的的规划创建。对于独立中小型企业网站的开发非常熟练，从建站到发布，符合SEO优化的网站。</div>
 <div>&nbsp;</div>
 <div style="color:#5D5D5D;font-size:14px;">&copy; FLi</div>
 <div>&nbsp;</div>
