登录注册页

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 <div id="about">
 <h2>关于</h2>
 <div>
-	<strong>github地址：</strong><a href="https://github.com/Fanli2012" target="_blank">https://github.com/Fanli2012</a></div>
+	<strong>GitHub地址：</strong><a href="https://github.com/Fanli2012" target="_blank">https://github.com/Fanli2012</a></div>
 <div>
 	&nbsp;</div>
 <div>《罗生门》这部黑白电影，明确无误的传达了人性的黑与白，再次用事实雄辩的告诉我们：真相是不存在的。它是如此的难以表达，你只能自己斟酌琢磨，作出自己的选择和判断。从这种意义上看，以揭露事实真相为终极目标的新闻记者，倒真是个令人绝望的职业。于普通人而言，整个世界上大部分的事实和人品，都如雾里看花，水中望月，须知穿过重重迷雾作出事实判断是多么的困难，须知,知人与自知是人类终生都不能完美完成的事业。</div>
